# meetmosaic

./: .env.example  .gitignore  middleware.ts  next.config.js  package-lock.json  package.json  vercel.json
app/: actions.ts
app/(auth-pages)/sign-in/: page.tsx
app/(auth-pages)/sign-up/: page.tsx
app/404/: page.tsx
app/account/: page.tsx
app/dashboard/: page.tsx
app/new/: onboarding-form.tsx  page.tsx
app/new/components/: BlogContentInputs.tsx  BusinessOverview.tsx  ContentSpecific.tsx  ContentStrategy.tsx  EmailMarketingInputs.tsx  LongTermGoals.tsx  SocialMediaInputs.tsx  TargetAudience.tsx
app/privacy/: page.tsx
app/settings/: page.tsx
app/tos/: page.tsx
backend/content_generator/: README.md  pyproject.toml
backend/content_generator/src/content_generator/: crew.py  main.py
components/: form-message.tsx
docs/: brainstorm.md  mosaic.md  project-overview.md
docs/architecture/: ai-pipeline.md  auth-flow.md  database-schema.md
docs/crewai-docs/: 00-index.md
docs/crewai-docs/01 - Get Started/: 01.01 - Introduction.md
docs/crewai-docs/01-get-started/: 01-02-installation.md  01-03-quickstart.md
docs/crewai-docs/02 - Core Concepts/: 02.06 - LLMs.md  02.08 - Collaboration.md  (+4 more)
supabase/: config.toml
supabase/migrations/: 20241217212803_create_core_schema.sql  20241217212810_create_payment_infrastructure.sql  20241217212816_create_security_policies.sql  20241217213220_enable_realtime.sql  20241217214510_create_future_tables.sql  20241217220752_add_content_flow_relationships.sql
utils/: routes.ts
utils/supabase/: middleware.ts
(+63 files in other folders)
