[project]
name = "content_generator"
version = "0.1.0"
description = "content_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
content_generator = "content_generator.main:run"
run_crew = "content_generator.main:run"
train = "content_generator.main:train"
replay = "content_generator.main:replay"
test = "content_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
